<resources>
    <string name="app_name">ShoesApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_addItem">Add item</string>
    <string name="add_item">Добавить новый товар</string>
    <string name="enter_item_name">Введите название товара</string>
    <string name="enter_item_price">Введите цену товара</string>
    <string name="val">Количество</string>
    <string name="enter_description">Введите описание товара</string>
    <string name="item_images">Фотографии товара</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back">back</string>
    <string name="save_item">Сохранить новый товар</string>
    <string name="scroll_view">scroll</string>
    <string name="add_to_cart">add to cart</string>
    <string name="scroll_description">scroll</string>
    <string name="exit">Выйти</string>
    <string name="delete_data">Вы точно хотите удалить товар?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="name_or_email">Name or email</string>
    <string name="email">lkue@mail.ru</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="toolbar">Tool Bar</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="email_description">Введите email</string>
    <string name="password_description">Введите пароль</string>
    <string name="google">Google</string>
    <string name="vk">Vk</string>
    <string name="gmail">Gmail</string>
    <string name="welcome_to">Добро пожаловать в нашей системе</string>
    <string name="sign_up">Sign Up</string>
</resources>