<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/navigation_add_graph"
            android:icon="@drawable/add"
            android:title="@string/title_addItem" />
        <item
            android:id="@+id/navigation_home_graph"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
    </group>

    <group android:menuCategory="container">
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

    </group>
</menu>