<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".View.ui.home.AddItemFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/normalMargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:contentDescription="TODO"
                    android:minWidth="48dp"
                    android:src="@drawable/ic_baseline_keyboard_backspace_24"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/halfMargin"
                    android:gravity="center_vertical"

                    android:text="@string/add_item"
                    android:textSize="18sp" />
            </LinearLayout>


            <EditText
                android:id="@+id/party_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginVertical="@dimen/normalMargin"
                android:hint="@string/enter_item_name"

                android:textSize="20sp"

                android:inputType="text" />

            <AutoCompleteTextView
                android:id="@+id/party_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/halfMargin"
                android:hint="@string/enter_item_price"
                android:minHeight="48dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/halfMargin">

                <EditText
                    android:id="@+id/party_max_people_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/val"
                    android:inputType="number"
                    android:textAlignment="center"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <EditText
                android:id="@+id/party_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/halfMargin"
                android:hint="@string/enter_description"

                android:inputType="textMultiLine"
                android:minHeight="48dp" />

            <RelativeLayout
                android:id="@+id/imagesLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/secondary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normalMargin"
                    android:layout_marginTop="@dimen/normalMargin"
                    android:layout_marginEnd="@dimen/normalMargin"
                    android:layout_marginBottom="@dimen/normalMargin"
                    android:text="@string/item_images" />
                <ImageView
                    android:id="@+id/imageDropdownArrow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="@dimen/halfMargin"
                    android:src="@drawable/arrow_down"
                    android:layout_alignParentEnd="true"
                    android:background="@color/secondaryDark"/>
            </RelativeLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/halfMargin"
                android:layout_marginBottom="@dimen/normalMargin"
                android:background="@color/background_secondary"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>


</FrameLayout>